# dominosrepo

./: Cargo.toml  Trunk.toml  index.html  netlify.toml  tailwind.config.js
Backend/: backend.py
Backend/runs/detect/train10/: args.yaml
Backend/runs/detect/train11/: results.csv
Backend/runs/detect/train12/: args.yaml  results.csv
Backend/runs/detect/train13/: args.yaml  results.csv
Backend/runs/detect/train4/: args.yaml
Backend/runs/detect/train8/: args.yaml
Backend/runs/detect/train9/: args.yaml
dominosrepo/: Trunk.toml  netlify.toml
dominosrepo/Backend/: backend.py  requirements.txt
dominosrepo/Backend/runs/detect/train/: args.yaml
dominosrepo/Backend/runs/detect/train11/: args.yaml
dominosrepo/Backend/runs/detect/train2/: args.yaml
dominosrepo/Backend/runs/detect/train3/: args.yaml
dominosrepo/Backend/runs/detect/train5/: args.yaml
dominosrepo/Backend/runs/detect/train6/: args.yaml
dominosrepo/Backend/runs/detect/train7/: args.yaml
dominosrepo/src/: main.rs
src/: main.rs
