[package]
name = "Dominos"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.3"
gloo-utils = "0.2"

web-sys = { version = "0.3", features = [
    "HtmlVideoElement", 
    "HtmlCanvasElement",
    "HtmlImageElement", 
    "CanvasRenderingContext2d", 
    "Navigator",                
    "MediaDevices",             
    "MediaStream",              
    "Url", 
    "Blob"
] }
js-sys = "0.3"
base64 = "0.13"
log = "0.4"
console_log = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-file = "0.2"
